index.html: Change Designation Of Cerj1

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                                                       <span class="card-title">Cerj1</span>
                                                     </div>
                                                     <div class="card-content grey darken-3">
-                                                      <p>Graphics Designer</p>
+                                                      <p>Theme Designer</p>
                                                     </div>
                                                     <div class="card-action">
                                                       <a href="#">This is a link</a>
