--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <link rel="stylesheet" href="css/main.css">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link rel="shortcut icon" type="image/x-icon" href="img/logo.jpg" />
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 <html>
@@ -89,7 +91,9 @@
                                   <p>Lead Developer</p>
                                 </div>
                                 <div class="card-action">
-                                  <a href="#">This is a link</a>
+                                  <a href="https://www.t.me/ZeNiXxXx" target="_blank"><i class="fab fa-telegram medium"></i><!-- style="width:24px;height:24px" viewBox="0 0 24 24">
+                                      <path fill="#2962FF" d="M9.78,18.65L10.06,14.42L17.74,7.5C18.08,7.19 17.67,7.04 17.22,7.31L7.74,13.3L3.64,12C2.76,11.75 2.75,11.14 3.84,10.7L19.81,4.54C20.54,4.21 21.24,4.72 20.96,5.84L18.24,18.65C18.05,19.56 17.5,19.78 16.74,19.36L12.6,16.3L10.61,18.23C10.38,18.46 10.19,18.65 9.78,18.65Z" />
+                                  </--></a>
                                 </div>
                               </div>
                             </div>
@@ -106,7 +110,9 @@
                                       <p>Lead Developer</p>
                                     </div>
                                     <div class="card-action">
-                                      <a href="#">This is a link</a>
+                                      <a href="https://www.t.me/SKULSHADY" target="_blank"><i class="fab fa-telegram medium"></i><!-- style="width:24px;height:24px" viewBox="0 0 24 24">
+                                          <path fill="#2962FF" d="M9.78,18.65L10.06,14.42L17.74,7.5C18.08,7.19 17.67,7.04 17.22,7.31L7.74,13.3L3.64,12C2.76,11.75 2.75,11.14 3.84,10.7L19.81,4.54C20.54,4.21 21.24,4.72 20.96,5.84L18.24,18.65C18.05,19.56 17.5,19.78 16.74,19.36L12.6,16.3L10.61,18.23C10.38,18.46 10.19,18.65 9.78,18.65Z" />
+                                      </--></a>
                                     </div>
                                   </div>
                                 </div>
@@ -123,7 +129,9 @@
                                           <p>Web Developer</p>
                                         </div>
                                         <div class="card-action">
-                                          <a href="#">This is a link</a>
+                                          <a href="https://www.t.me/Avb34" target="_blank"><i class="fab fa-telegram medium"></i><!-- style="width:24px;height:24px" viewBox="0 0 24 24">
+                                              <path fill="#2962FF" d="M9.78,18.65L10.06,14.42L17.74,7.5C18.08,7.19 17.67,7.04 17.22,7.31L7.74,13.3L3.64,12C2.76,11.75 2.75,11.14 3.84,10.7L19.81,4.54C20.54,4.21 21.24,4.72 20.96,5.84L18.24,18.65C18.05,19.56 17.5,19.78 16.74,19.36L12.6,16.3L10.61,18.23C10.38,18.46 10.19,18.65 9.78,18.65Z" />
+                                          </--></a>
                                         </div>
                                       </div>
                                     </div>
@@ -133,13 +141,15 @@
                                           <div class="card z-depth-5">
                                             <div class="card-image">
                                               <img src="img/Team4.png">
-                                              <span class="card-title">Filippo</span>
+                                              <span class="card-title">Filippo Roggi</span>
                                             </div>
                                             <div class="card-content grey darken-3">
                                               <p>PR Manager</p>
                                             </div>
                                             <div class="card-action">
-                                              <a href="#">This is a link</a>
+                                              <a href="https://www.t.me/zzkW35" target="_blank"><i class="fab fa-telegram medium"></i><!-- style="width:24px;height:24px" viewBox="0 0 24 24">
+                                                  <path fill="#2962FF" d="M9.78,18.65L10.06,14.42L17.74,7.5C18.08,7.19 17.67,7.04 17.22,7.31L7.74,13.3L3.64,12C2.76,11.75 2.75,11.14 3.84,10.7L19.81,4.54C20.54,4.21 21.24,4.72 20.96,5.84L18.24,18.65C18.05,19.56 17.5,19.78 16.74,19.36L12.6,16.3L10.61,18.23C10.38,18.46 10.19,18.65 9.78,18.65Z" />
+                                              </--></a>
                                             </div>
                                           </div>
                                         </div>
@@ -156,7 +166,9 @@
                                                   <p>Graphics Designer</p>
                                                 </div>
                                                 <div class="card-action">
-                                                  <a href="#">This is a link</a>
+                                                  <a href="https://www.t.me/theoj22" target="_blank"><i class="fab fa-telegram medium"></i><!-- style="width:24px;height:24px" viewBox="0 0 24 24">
+                                                      <path fill="#2962FF" d="M9.78,18.65L10.06,14.42L17.74,7.5C18.08,7.19 17.67,7.04 17.22,7.31L7.74,13.3L3.64,12C2.76,11.75 2.75,11.14 3.84,10.7L19.81,4.54C20.54,4.21 21.24,4.72 20.96,5.84L18.24,18.65C18.05,19.56 17.5,19.78 16.74,19.36L12.6,16.3L10.61,18.23C10.38,18.46 10.19,18.65 9.78,18.65Z" />
+                                                  </--></a>
                                                 </div>
                                               </div>
                                             </div>
@@ -173,7 +185,9 @@
                                                       <p>Theme Designer</p>
                                                     </div>
                                                     <div class="card-action">
-                                                      <a href="#">This is a link</a>
+                                                      <a href="https://www.t.me/cerj1" target="_blank"><i class="fab fa-telegram medium"></i><!-- style="width:24px;height:24px" viewBox="0 0 24 24">
+                                                          <path fill="#2962FF" d="M9.78,18.65L10.06,14.42L17.74,7.5C18.08,7.19 17.67,7.04 17.22,7.31L7.74,13.3L3.64,12C2.76,11.75 2.75,11.14 3.84,10.7L19.81,4.54C20.54,4.21 21.24,4.72 20.96,5.84L18.24,18.65C18.05,19.56 17.5,19.78 16.74,19.36L12.6,16.3L10.61,18.23C10.38,18.46 10.19,18.65 9.78,18.65Z" />
+                                                      </--></a>
                                                     </div>
                                                   </div>
                                                 </div>
@@ -250,7 +264,7 @@
             <div class="footer-copyright">
               <div class="container">
               &copy; 2019 Havoc OS
-              <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+              <a class="grey-text text-lighten-4 right" href="#!"></a>
               </div>
             </div>
           </footer>
